fixed contact form spacing

--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,8 @@ select {
   height: auto;
   margin: 0;
   outline: 0;
-  padding: 15px;
-  width: 100%;
+  padding: 10px;
+  width: 90%;
   box-shadow: 0 0px 0 rgba(0,0,0,0.03) inset;
   margin-bottom: 30px;
 }
